--- a/Task1.html
+++ b/Task1.html
@@ -1,47 +1,116 @@
 <!DOCTYPE html>
 <html lang="en">
-<head role="presentation">
+<head>
+
     <meta charset="UTF-8">
+
     <title>todos</title>
+
 </head>
+
 <body>
-<div class="main-wrapper">
-    <div class="content" role="main">
-        <h1 class="main-title" role="heading" aria-label="todos">todos</h1>
-        <div class="main-menu" role="navigation" aria-label="Main menu">
-            <label>
-                <input class="main-menu-input" role="textbox" aria-label="What needs to be done?"
-                       placeholder="What needs to be done?">
-            </label>
-            <div class="technologies" role="checkbox" aria-label="Technologies">
-                <label>
-                    <input type="checkbox" name="technology" value="HTML" aria-label="HTML">HTML<br/>
-                </label>
-                <label>
-                    <input type="checkbox" name="technology" value="CSS" checked aria-label="CSS" aria-checked="true">CSS<br/>
-                </label>
-                <label>
-                    <input type="checkbox" name="technology" value="JS" aria-label="JS">JS<br/>
-                </label>
-                <label>
-                    <input type="checkbox" name="technology" value="JS tools" aria-label="JS tools">JS tools<br/>
-                </label>
-            </div>
-            <div class="menu-information" role="contentinfo" aria-label="Menu information">
-                <div class="items-left" role="status" aria-label="Count of items left">
-                    3 items left
-                </div>
-                <div class="status" role="navigation" aria-label="Status of items">
-                    <input type="button" class="btn btn-flat" value="All">
-                    <input type="button" class="btn btn-flat" value="Active">
-                    <input type="button" class="btn btn-flat" value="Completed">
-                </div>
-                <div class="task" role="log" aria-label="Last task information">
-                    Clear completed
-                </div>
-            </div>
-        </div>
+
+<div class="content">
+
+    <div class="todos-header">
+
+        <h1 class="todos-title">Todos</h1>
+
     </div>
+
+    <div class="todos-menu">
+
+        <div class="todos-add">
+
+            <button class="todos-add_select_all"
+                    aria-label="select all items as completed"></button>
+
+            <input class="todos-add_item" placeholder="What needs to be done?"
+                   aria-label="add item">
+
+        </div>
+
+        <div class="todos-list">
+
+            <div class="todos-item">
+
+                <input type="checkbox" class="todos-item_complete_mark"
+                       aria-label="Mark as completed item"/>
+
+                <textarea class="todos-item_name">HTML</textarea>
+
+                <button class="todos-item_remove" aria-label="remove item"></button>
+
+            </div>
+
+            <div class="todos-item __complete">
+
+                <input type="checkbox" checked="checked" class="todos-item_no_completed_mark"
+                       aria-label="Mark as no completed item"/>
+
+                <textarea class="todos-item_name">CSS</textarea>
+
+                <button class="todos-item_remove" aria-label="remove item"></button>
+
+            </div>
+
+            <div class="todos-item">
+
+                <input type="checkbox" class="todos-item_completed_mark"
+                       aria-label="Mark as completed item"/>
+
+                <textarea class="todos-item_name">JS</textarea>
+
+                <button class="todos-item_remove" aria-label="remove item"></button>
+
+            </div>
+
+            <div class="todos-item">
+
+                <input type="checkbox" class="todos-item_completed_mark"
+                       aria-label="Mark as completed item"/>
+
+                <textarea class="todos-item_name">JS tools</textarea>
+
+                <button class="todos-item_remove" aria-label="remove item"></button>
+
+            </div>
+
+        </div>
+
+        <div class="todos-actions_bar">
+
+            <div class="todos-actions_bar_counter" aria-label="Count of no completed items">
+                3 items left
+            </div>
+
+            <div class="todos-filters">
+
+                <button class="todos-filter __active" data-filter="all"
+                        aria-label="show all items">
+                    All
+                </button>
+
+                <button class="todos-filter" data-filter="no_completed"
+                        aria-label="show no completed items">
+                    Active
+                </button>
+
+                <button class="todos-filter __active" data-filter="completed"
+                        aria-label="show completed items">
+                    Completed
+                </button>
+
+            </div>
+
+            <button class="todos-actions_bar_clear_completed">Clear completed</button>
+
+        </div>
+
+    </div>
+
 </div>
+
 </body>
+
 </html>
